# RUST

./: .gitignore  README.md  general_notes.txt
avatar_game/: Cargo.toml
avatar_game/src/: main.rs
common_programming_concepts/: notes.txt
common_programming_concepts/Data_Types/: notes.txt
common_programming_concepts/control_flow_ifs/src/: main.rs
common_programming_concepts/functions/src/: main.rs
crypto_cli/: Cargo.toml
crypto_cli/src/: api.rs  cli.rs  main.rs
ecosystem_simulation_package/: Cargo.toml
ecosystem_simulation_package/src/: main.rs
enums/src/: main.rs
factorial/src/: main.rs
fibonaci/src/: main.rs
geometric_shapes/: Cargo.toml
geometric_shapes/src/: main.rs
goblin_game/: Cargo.toml
goblin_game/src/: main.rs
guessing_game/src/: main.rs
hello_world/: main.rs
invetory_system/: Cargo.toml
invetory_system/src/: inventory.rs  main.rs  product.rs
lifetimes/: notes.txt
lifetimes/src/: main.rs
match_control_flow/src/: main.rs
media_player_package/: Cargo.toml
media_player_package/src/: main.rs
methods/src/: main.rs
new_blockchain_block/: Cargo.toml
new_blockchain_block/src/: main.rs
ownership/src/: main.rs
packages_and_crates/src/: main.rs
random_guess/: Cargo.toml
random_guess/src/: main.rs
references_borrowing/src/: main.rs
shapes_project/: Cargo.toml
shapes_project/src/: main.rs  shapes.rs  utils.rs
slice_type/src/: main.rs
struct_example_program/src/: main.rs
structs/src/: main.rs
structure_related_data/src/: main.rs
temperature_converter/src/: main.rs
(+8 files in other folders)
